fixed logo not showing up on jumbotron

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .display-4 {
-  background-image: url(../pharmacy/medlogo.png);
+  background-image: url(../deliveryman/medlogo.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: 60% 80%;
